--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-03 15:21:54
+lastsearch = 2024-08-03 20:27:06
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 14.3%%
+title = Nệm EverHome TC 160x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html
 
 [bachhoadem.vn]
 match = 28.6%%
