--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-03 21:26:54
+lastsearch = 2024-08-03 22:15:19
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -260.0%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
@@ -437,7 +437,7 @@ title = 13 điểm mới của Luật trật tự an toàn giao thông đường
 url = https://baobacgiang.vn/13-diem-moi-cua-luat-trat-tu-an-toan-giao-thong-duong-bo-103308.bbg
 
 [xoilaczvu.tv]
-match = -233.3%%
-title = Trực tiếp Souths United vs Samford Ranges vào lúc 15:30 ...
-url = https://xoilaczvu.tv/truc-tiep/souths-united-vs-samford-ranges-luc-1400-ngay-03-08-2024/
+match = -226.7%%
+title = Trực tiếp Magic United TFA vs North Lakes vào lúc 13:00 ...
+url = https://xoilaczvu.tv/truc-tiep/magic-united-tfa-vs-north-lakes-luc-1400-ngay-03-08-2024/
 
