--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-03 19:55:07
+lastsearch = 2024-08-03 22:13:37
 
 [chieutrelanlan.com]
 match = -17.9%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/search?keyword=chiếu trúc hạt
 [www.diepxuan.com]
 match = 28.6%%
 title = Chiếu trúc Quế Lâm II 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html?srsltid=AfmBOor43uzgPHarpqDomDLDJazO5qAEhXijiGqy1RlK9MzvhM2ZvaHE
+url = https://www.diepxuan.com/chieu-truc-que-lam-ii-180x200.html
 
 [www.lazada.vn]
 match = 70.4%%
