--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-03 21:33:16
+lastsearch = 2024-08-03 22:16:20
 
 [demxanh.com]
 match = -42.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html?srsltid=AfmBOor4PdJRoTHzMqbYbWvdOe4t6o7sKuXa4BscGPnzPNcsDcI5mR-3
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
 
 [www.diepxuan.com]
 match = -3.6%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOoqdTyvlhqEEfApuC2hJ3P0K7QL_E6EhDkJCfJ7_McHfakD1HqbQ
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [mgaleg.maryland.gov]
 match = -75.0%%
