--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-08-03 17:44:58
+lastsearch = 2024-08-03 23:20:06
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -12,14 +12,14 @@ title = Everon EPT20041 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/Everon-EPT20041.html
 
 [everon.online]
-match = -21.4%%
-title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
-url = https://everon.online/collections/chan-bon-mua-everon
+match = 17.9%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
+match = -3.6%%
+title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [demxanh.com]
 match = -32.1%%
