--- a/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
+++ b/images/bo-ga-phu-warmdream-freesize-phi-lua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-phu-warmdream-freesize-phi-lua.html
 lastopen = 2024-06-10 00:45:38
 
 [search]
-lastsearch = 2024-08-03 17:00:03
+lastsearch = 2024-08-03 23:16:41
 
 [changagoidem.co]
 match = 8.3%%
@@ -34,7 +34,7 @@ url = https://sieuthimuare.com/bo-chan-ga-goi-phi-lua-chan-chan/
 [vuanem.com]
 match = -2.8%%
 title = Top 15 mẫu drap giường phi lụa được yêu thích nhất
-url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html?srsltid=AfmBOoqdX22rMvDo49p-FVfmXwOVqjdzYppTQk4OkQiimyROmyzmGBxD
+url = https://vuanem.com/blog/mau-drap-giuong-phi-lua.html
 
 [diepxuan.com]
 match = 17.1%%
