--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-03 21:25:52
+lastsearch = 2024-08-03 23:19:24
 
 [demxanh.com]
-match = -135.3%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 64.7%%
+title = Chiếu trúc hạt đen
+url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html?srsltid=AfmBOooSb1FA2paBYKQEkZejv5lzbshIZqRz2tV9fnmBk3TOy4wQjBha
 
 [dem24h.vn]
 match = -29.4%%
@@ -47,9 +47,9 @@ title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
 url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -111.8%%
+title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [chieu.com.vn]
 match = 41.2%%
