--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-08-03 23:16:22
+lastsearch = 2024-08-04 01:23:08
 
 [www.muji.com]
-match = -33.3%%
-title = RUỘT CHĂN
-url = https://www.muji.com/vn/products/section/E30001
+match = 7.1%%
+title = chăn lông nhung xám mỏng
+url = https://www.muji.com/vn/vi/shop/000101/articles/recommend/1221
 
 [thegioidemviet.vn]
 match = -192.9%%
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware?srsltid=AfmBOort1Vj-eAzr0hC2SN2xRsIuS5tEU5KKGpFK7FiNFOFFZGIb8IfG
+url = https://www.muji.us/collections/tableware
 
 [xachtaynhat.com.vn]
 match = -35.7%%
