--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-04 00:34:38
+lastsearch = 2024-08-04 01:31:28
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = adz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=.adz
+title = aDz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=aDz
 
 [www.vietnamairport.vn]
 match = -213.3%%
