--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-03 23:38:06
+lastsearch = 2024-08-04 01:18:46
 
 [www.galottery.com]
 match = -7.7%%
@@ -174,7 +174,7 @@ url = https://www.rn.ca.gov/applicants/lic-end.shtml
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001
+url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOoq2aOXbs9TsqAjx_oqZHK5a9QUOtAUZgtRAHX-wk6rMXHA1VwpA
 
 [www.imdb.com]
 match = 0.0%%
@@ -212,9 +212,9 @@ title =
 url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-features-benefits-of-each/
 
 [books.google.com]
-match = -246.2%%
-title = Fresh Fruit and Vegetable Unload Totals for 41 Cities
-url = https://books.google.com/books?id=1M_dEDVBZVwC&pg=RA1-PA82&lpg=RA1-PA82&dq=ga+ni+long+14&source=bl&ots=_vyGer41X0&sig=ACfU3U0g07REif5JA37cJpbgyGkREubsyQ&hl=en&sa=X&ved=2ahUKEwivmreModmHAxU6EFkFHXfsA0oQ6AF6BAgYEAM
+match = -330.8%%
+title = Anthropological Papers of the American Museum of Natural History
+url = https://books.google.com/books?id=2XdBAQAAMAAJ&pg=PA37&lpg=PA37&dq=ga+ni+long+14&source=bl&ots=Hd6xezhrxJ&sig=ACfU3U2ZmQC5053SpNHCehzOTGaufiEBCA&hl=en&sa=X&ved=2ahUKEwj1opvMt9mHAxWUm4kEHSRyB3UQ6AF6BAgZEAM
 
 [ottawabraves.com]
 match = -292.3%%
