--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-03 22:01:31
+lastsearch = 2024-08-04 01:17:00
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -205.9%%
-title = If an HOA in state does not enforce its rules for a certain ...
-url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -29,7 +29,7 @@ url = https://www.flsenate.gov/laws/statutes/2018/720.303
 [www.doorloop.com]
 match = 0.0%%
 title = 
-url = https://www.doorloop.com/laws/arizona-hoa-laws
+url = https://www.doorloop.com/laws/georgia-hoa-laws
 
 [www.reddit.com]
 match = -141.2%%
