--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-04 00:27:39
+lastsearch = 2024-08-04 01:27:38
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC69qlNNQD&sig=ACfU3U1Nv6MSjPZW580f_g_7_mbS1olCeQ&hl=en&sa=X&ved=2ahUKEwjbgoqWrNmHAxWDPTQIHQkeANsQ6AF6BAgZEAM
+match = -17.6%%
+title = The Bankers Encyclopedia
+url = https://books.google.com/books?id=r4U8Z83fm_cC&pg=PA95&lpg=PA95&dq=man+in+hoa+dep+16&source=bl&ots=GLYMkEW-kZ&sig=ACfU3U2ApyqIwI6zAOI6pN9x3UiEf2H1yQ&hl=en&sa=X&ved=2ahUKEwi87ufJudmHAxWJjYkEHU_REIYQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
