--- a/images/nem-caosu-lien-a-180x200x10-classic/config.ini
+++ b/images/nem-caosu-lien-a-180x200x10-classic/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-180x200x10-classic.html
 lastopen = 2024-07-02 13:17:37
 
 [search]
-lastsearch = 2024-08-03 12:28:59
+lastsearch = 2024-08-04 01:22:10
 
 [nemgiakho.com]
 match = 11.4%%
@@ -37,9 +37,9 @@ title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
 url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
 
 [www.thegioinemvip.com]
-match = 34.3%%
-title = Nệm cao su Liên Á Classic khuyến mãi 2024
-url = https://www.thegioinemvip.com/nem-cao-su-lien-a-classic-khuyen-mai-gia-re-tphcm.html
+match = -8.6%%
+title = Bảng giá Nệm Liên Á tháng 8/2024 Mới cùng khuyến mãi
+url = https://www.thegioinemvip.com/bang-gia-nem-lien-a-khuyen-mai-moi-nhat.html
 
 [thegioidemviet.vn]
 match = 20.0%%
