--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-03 23:38:49
+lastsearch = 2024-08-04 01:26:12
 
 [erado.vn]
 match = 0.0%%
@@ -255,4 +255,9 @@ url = https://giuonggapvietnhat.vn/
 match = -85.0%%
 title = Bộ Thảm Bếp, Thảm Để Chân Giường, Thảm Lau Chân ...
 url = https://spacet.vn/shop/bo-tham-bep-tham-de-chan-giuong-tham-lau-chan-long-cuu-cao-cap-nhap-khau-50x120-12378
+
+[tonybed.com]
+match = 10.5%%
+title = Drap ga trải giường
+url = https://tonybed.com/drap-ga-trai-giuong/
 
