--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-03 22:48:09
+lastsearch = 2024-08-04 01:47:00
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,8 +17,8 @@ title = Đệm bông ép chính hãng giảm 50 ...
 url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
-match = -128.6%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
+match = -95.2%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
 url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = 14.3%%
+title = Nệm EverHome TC 160x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html
 
 [bachhoadem.vn]
 match = 28.6%%
