--- a/images/nem-everon-140x200x9/config.ini
+++ b/images/nem-everon-140x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-140x200x9.html
 lastopen = 2024-06-06 17:10:12
 
 [search]
-lastsearch = 2024-08-04 00:42:58
+lastsearch = 2024-08-04 01:46:18
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -59,7 +59,7 @@ url = https://www.diepxuan.com/everon/nem-everon.html?p=2
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOooB1jKnaGlSyd74_-S-YyywTIxCdjU8ExO3ZBoCayjGRTU-IKN4
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
 
 [www.changagoidemeveron.vn]
 match = -105.0%%
