--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-04 00:16:12
+lastsearch = 2024-08-04 01:47:44
 
 [en.wikipedia.org]
-match = 10.0%%
-title = Anti-Korean sentiment
-url = https://en.wikipedia.org/wiki/Anti-Korean_sentiment
+match = -12.5%%
+title = Gwangju Uprising
+url = https://en.wikipedia.org/wiki/Gwangju_Uprising
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -48,7 +48,7 @@ url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
-title = Puppy Names - Cute & Unique Dog Names
+title = Puppy Names – Cute & Unique Dog Names
 url = https://www.akc.org/expert-advice/lifestyle/puppy-names/
 
 [www.britannica.com]
