--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-04 00:31:33
+lastsearch = 2024-08-04 02:45:18
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 25.0%%
+title = 10 bộ chăn ga gối đệm tencel đẹp nhất
+url = https://chanrathanhthuy.com/tin-tuc/10-bo-chan-ga-goi-dem-tencel-dep-nhat-714.html
 
 [myhunggia.com]
 match = -4.2%%
@@ -77,14 +77,14 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -66.7%%
-title = ga giừơng 16m x 2m giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=ga giừơng 16m x 2m
+match = -75.0%%
+title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
+url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
 match = -8.3%%
 title = Bộ chăn ga gối lụa tơ tằm cao cấp King luxury 16
-url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html
+url = https://demxanh.com/bo-chan-ga-goi-lua-to-tam-cao-cap-king-luxury-16.html?srsltid=AfmBOoqzSyhlLoJ-N9P7-HZyXJVozg_rpmmrI8d6HWqWpO_ywqqvckzy
 
 [changagoibenlinda.com]
 match = -12.5%%
