--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-04 01:17:00
+lastsearch = 2024-08-04 02:44:57
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -170.6%%
-title = Florida HOA. Are HOAs still able to enter properties ...
-url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
+match = -188.2%%
+title = Florida HOA Ch 720. I am aware there is a 14 day notice ...
+url = https://www.justanswer.com/law/axy44-florida-hoa-ch-720-aware-14-day-notice.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -29,7 +29,7 @@ url = https://www.flsenate.gov/laws/statutes/2018/720.303
 [www.doorloop.com]
 match = 0.0%%
 title = 
-url = https://www.doorloop.com/laws/georgia-hoa-laws
+url = https://www.doorloop.com/laws/arizona-hoa-laws
 
 [www.reddit.com]
 match = -35.3%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -217.6%%
-title = If I already live in a neighborhood, and HOA tries to claim it ...
-url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
