--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-04 04:30:23
+lastsearch = 2024-08-04 05:30:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -232,9 +232,9 @@ title = DANH SÁCH CÁC TỈNH THÀNH CÓ CƠ SỞ Y TẾ ĐƯỢC ...
 url = https://www.manulife.com.vn/content/dam/insurance/vn/documents/service-docs/quyen-loi-hop-dong-bao-hiem/danh-sach-bao-lanh-vien-phi-tai-viet-nam.pdf
 
 [www.instagram.com]
-match = -220.0%%
-title = The B6 Hà Nội - Đồ Hàn | Có lương về tự dưng thấy ăn ...
-url = https://www.instagram.com/theb6.hanoi/p/C70XOHXvqJ3/
+match = -206.7%%
+title = Vesta Lifestyle & Gifts | 🌈 HAPPY PRIDE MONTH 🌈 Top ...
+url = https://www.instagram.com/vesta.lifestyle/p/C7wT8s0vvbM/
 
 [luatvietnam.vn]
 match = -240.0%%
@@ -249,7 +249,7 @@ url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-posta
 [agasound.vn]
 match = 6.7%%
 title = D2.15 - AGASOUND
-url = https://agasound.vn/d215?p=5
+url = https://agasound.vn/d215
 
 [nhiepanhdoisong.vn]
 match = -246.7%%
